--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,18 +9,33 @@
 %body
   %nav.navbar.navbar-inverse.navbar-fixed-top
     .container
-      .navbar-header
-        %button.navbar-toggle.collapsed{"aria-controls" => "navbar", "aria-expanded" => "false", "data-target" => "#navbar", "data-toggle" => "collapse", :type => "button"}
-          %span.sr-only Toggle navigation
-          %span.icon-bar
-          %span.icon-bar
-          %span.icon-bar
-        %a.navbar-brand{:href => "#"} Reading List
-      #navbar.navbar-collapse.collapse
-        %form.navbar-form.navbar-right
-          .form-group
-            %input.form-control{:placeholder => "Email", :type => "text"}
-          .form-group
-            %input.form-control{:placeholder => "Password", :type => "password"}
-          %button.btn.btn-success{:type => "submit"} Sign in
+      .row
+        .navbar-header
+          %button.navbar-toggle.collapsed{"aria-controls" => "navbar", "aria-expanded" => "false", "data-target" => "#navbar", "data-toggle" => "collapse", :type => "button"}
+            %span.sr-only Toggle navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          .navbar-brand= link_to "Reading List", root_path 
+        #navbar.navbar-collapse.collapse.navbar-right.navbar-brand
+          = link_to "About", about_path
+          = link_to "Contact", contact_path
+          - if current_user
+            Hello #{current_user.name}! #{link_to "Sign out", destroy_user_session_path, method: :delete}
+          - else
+            = link_to "Sign In", new_user_session_path
+    .container
+      .row
+        - if flash[:notice]
+          .alert.alert-success
+            %button.close{"data-dismiss" => "alert", :type => "button"} &times;
+            = flash[:notice]
+        - elsif flash[:error]
+          .alert.alert-danger
+            %button.close{"data-dismiss" => "alert", :type => "button"} &times;
+            = flash[:error]
+        - elsif flash[:alert]
+          .alert.alert-warning
+            %button.close{"data-dismiss" => "alert", :type => "button"} &times;
+            = flash[:alert]
 = yield
