--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -3,3 +3,4 @@
     = @bookmark.url 
     %br/
     = @bookmark.tag_list
+  = link_to "Delete Bookmark", @bookmark, method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure you want to delete this bookmark?" }
