--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -1,7 +1,5 @@
 .container
-  %h1
-    = @bookmark.url 
-    %br/
-    = @bookmark.tag_list
+  %h1= @bookmark.url 
+  %p= @bookmark.tag_list
   = link_to "Delete Bookmark", @bookmark, method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure you want to delete this bookmark?" }
   = link_to "Edit Bookmark", edit_bookmark_path, class: 'btn btn-success'
