--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -1,5 +1,6 @@
 .container
-  %h1= @bookmark.url 
+  %h1= @bookmark.url
   %p= @bookmark.tag_list
+  = render partial: 'likes/like', locals: { bookmark: @bookmark }
   = link_to "Delete Bookmark", @bookmark, method: :delete, class: 'btn btn-danger', data: { confirm: "Are you sure you want to delete this bookmark?" }
   = link_to "Edit Bookmark", edit_bookmark_path, class: 'btn btn-success'
