--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -2,7 +2,7 @@
   %div
     - if like = current_user.liked(bookmark)
       = link_to [bookmark, like], class: 'btn btn-danger', method: :delete do
-        %i.glyphicon.glyphicon-star-empty> \&nbsp; Unlike
+        %i.glyphicon.glyphicon-star-empty> &nbsp; Unlike
     - else
-      = link_to [bookmark, like.new], class: 'btn btn-primary', method: :post do
-        %i.glyphicon.glyphicon-star> \&nbsp; Like
+      = link_to [bookmark, Like.new], class: 'btn btn-primary', method: :post do
+        %i.glyphicon.glyphicon-star> &nbsp; Like
