--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
         = link_to "About", about_path
         = link_to "Contact", contact_path
         - if current_user
-          = link_to "My Bookmarks", bookmarks_path
+          = link_to "My Bookmarks", root_path
           Hello #{current_user.name}! #{link_to "Sign out", destroy_user_session_path, method: :delete}
         - else
           = link_to "Sign In", new_user_session_path
